--- a/src/dxvk.conf
+++ b/src/dxvk.conf
@@ -1,5 +1,7 @@
 # DXVK configuration for World of Warcraft 1.12
 
+d3d9.enableDialogMode = True
+
 # Uncomment to set framerate limit
 # d3d9.maxFrameRate = 1000
 
