Refactoring and documentation improvements
- Add more comments and fix some incorrect ones
- Add logs that can be viewed in DebugView (https://learn.microsoft.com/en-us/sysinternals/downloads/debugview)
- Use C stdlib for allocating and freeing memory (since we have to rely on it anyway)
- Stop including a precompiled header in every file

--- a/src/dll/CMakeLists.txt
+++ b/src/dll/CMakeLists.txt
@@ -3,7 +3,8 @@ add_library(vanillafixes_dll SHARED "dll.c")
 target_compile_features(vanillafixes_dll PRIVATE c_std_99)
 set_target_properties(vanillafixes_dll PROPERTIES MSVC_RUNTIME_LIBRARY "MultiThreaded")
 
-target_precompile_headers(vanillafixes_dll PRIVATE "${CMAKE_SOURCE_DIR}/src/pch.h")
+target_compile_definitions(vanillafixes_dll PRIVATE -DUNICODE -D_UNICODE -DWIN32_LEAN_AND_MEAN)
+target_include_directories(vanillafixes_dll PRIVATE "${CMAKE_SOURCE_DIR}/src")
 
 # Include MinHook in the DLL
 target_include_directories(vanillafixes_dll PRIVATE "${CMAKE_SOURCE_DIR}/minhook/include")
