Allow the user to select a list of additional DLLs to load
- VanillaFixes will load files listed in dlls.txt, assuming they can be found in the game directory or at an absolute path
- A reminder will be shown when the list of active DLLs has changed
- VanillaFixes will check for an exported function "Load" and call it if available (the intended user is nampower)

--- a/.editorconfig
+++ b/.editorconfig
@@ -7,8 +7,8 @@ end_of_line = lf
 indent_style = tab
 tab_width = 4
 
-insert_final_newline = false
+insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{ini,conf}]
+[*.{ini,conf,txt}]
 end_of_line = crlf
