Add a DXVK self-test to inform the user if D3D9 device creation failed
The test will only run if the bundled DXVK is in use. Should help issues like #2 and #24.

--- a/.editorconfig
+++ b/.editorconfig
@@ -10,5 +10,5 @@ tab_width = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{ini,conf,txt}]
+[{*.{ini,conf},dlls.txt}]
 end_of_line = crlf
