--- a/src/launcher/CMakeLists.txt
+++ b/src/launcher/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_executable(vanillafixes_launcher WIN32
 	"main.c"
 	"cmdline.c"
+	"selftest.c"
 
 	"${CMAKE_SOURCE_DIR}/src/loader.c"
 	"${CMAKE_SOURCE_DIR}/src/os.c"
