Disable d3d9.dpiAware in dxvk.conf
This is handled by VanillaFixes now

--- a/src/configs/dxvk.conf
+++ b/src/configs/dxvk.conf
@@ -6,3 +6,6 @@
 # Disabled because it causes out of memory errors
 dxvk.enableGraphicsPipelineLibrary = False
 dxvk.numCompilerThreads = 2
+
+# Disabled because VanillaFixes sets process DPI awareness
+d3d9.dpiAware = False
