Add a comment explaining d3d9.enableDialogMode to dxvk.conf

--- a/src/configs/dxvk.conf
+++ b/src/configs/dxvk.conf
@@ -3,6 +3,9 @@
 # Uncomment to set framerate limit
 # d3d9.maxFrameRate = 1000
 
+# Uncomment to force borderless fullscreen
+# d3d9.enableDialogMode = True
+
 # Disabled because it causes out of memory errors
 dxvk.enableGraphicsPipelineLibrary = False
 dxvk.numCompilerThreads = 2
