Enable GPL in DXVK configuration

--- a/src/configs/dxvk.conf
+++ b/src/configs/dxvk.conf
@@ -6,9 +6,12 @@
 # Uncomment to force borderless fullscreen
 # d3d9.enableDialogMode = True
 
-# Disabled because it causes out of memory errors
-dxvk.enableGraphicsPipelineLibrary = False
-dxvk.numCompilerThreads = 2
+# Enable GPL if supported to reduce stuttering (NVIDIA 473.33+, AMD 24.6.1+)
+dxvk.enableGraphicsPipelineLibrary = Auto
+# Track pipeline lifetimes to reduce memory usage
+dxvk.trackPipelineLifetime = True
+# Limit compiler threads to reduce memory usage
+dxvk.numCompilerThreads = 4
 
 # Disabled because VanillaFixes sets process DPI awareness
 d3d9.dpiAware = False
