Support for older versions (1.6.1-1.12.1)
Co-authored-by: Daribon <Daribon@users.noreply.github.com>

--- a/src/dll/CMakeLists.txt
+++ b/src/dll/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(vanillafixes_dll SHARED
 	"dll.c"
+	"memory.c"
 	"tsc.c"
 
 	"${CMAKE_SOURCE_DIR}/src/loader.c"
@@ -22,7 +23,7 @@ else()
 	endif()
 endif()
 
-target_compile_definitions(vanillafixes_dll PRIVATE -DUNICODE -D_UNICODE -DWIN32_LEAN_AND_MEAN -D_CRT_SECURE_NO_WARNINGS)
+target_compile_definitions(vanillafixes_dll PRIVATE -DUNICODE -D_UNICODE -DWIN32_LEAN_AND_MEAN -D_CRT_SECURE_NO_WARNINGS -DPSAPI_VERSION=1)
 target_include_directories(vanillafixes_dll PRIVATE "${CMAKE_SOURCE_DIR}/src")
 
 # Include MinHook in the DLL
@@ -36,7 +37,7 @@ target_sources(
 	"${CMAKE_SOURCE_DIR}/minhook/src/hde/hde32.c"
 )
 
-target_link_libraries(vanillafixes_dll shlwapi winmm)
+target_link_libraries(vanillafixes_dll shlwapi winmm psapi)
 
 set_target_properties(vanillafixes_dll PROPERTIES PREFIX "")
 set_target_properties(vanillafixes_dll PROPERTIES OUTPUT_NAME "VfPatcher")
