--- a/src/configs/dxvk.conf
+++ b/src/configs/dxvk.conf
@@ -1,4 +1,4 @@
-# DXVK configuration for World of Warcraft 1.12
+# DXVK configuration for World of Warcraft
 
 # Uncomment to set framerate limit
 # d3d9.maxFrameRate = 1000
