Add dxvk.allowFse to DXVK configuration

--- a/src/configs/dxvk.conf
+++ b/src/configs/dxvk.conf
@@ -13,5 +13,8 @@ dxvk.trackPipelineLifetime = True
 # Limit compiler threads to reduce memory usage
 dxvk.numCompilerThreads = 4
 
+# Allow exclusive fullscreen mode on Windows
+dxvk.allowFse = True
+
 # Disabled because VanillaFixes sets process DPI awareness
 d3d9.dpiAware = False
